--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,6 @@
   "extends": [
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "prettier"
   ]
 }
