--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build src/index.html",
-    "start": "tsc --noEmit --watch & parcel src/index.html"
+    "start": "tsc --noEmit --watch & parcel src/index.html",
+    "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "repository": {
     "type": "git",
